# chatbot_fastapi

./: main.py  pyproject.toml
client/: bedrock_client.py  s3_client.py
datastore/: datastore.py  factory.py
datastore/providers/: elasticsearch_datastore.py  pinecone_datastore.py
models/: models.py
server/: main.py
services/: chunks.py  date.py  gemini.py
services/common/: chunks.py  file.py
text/: 2023-09-01.txt
